--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
     "express": "^4.16.3",
+    "morgan": "^1.9.1",
     "pg": "^7.4.3",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
