--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "school-for-monsters-senior-enrichment-project",
   "version": "1.0.0",
   "description": "",
-  "main": "server/index.js",
+  "main": "index.js",
   "dependencies": {
     "axios": "^0.18.0",
     "babel-core": "^6.26.3",
@@ -35,7 +35,7 @@
   "scripts": {
     "postinstall": "npm run webpack",
     "webpack": "./node_modules/webpack/bin/webpack.js",
-    "start:dev": "npm run webpack -- --watch --mode=development & DATABASE_URL=postgres://localhost/monster_db nodemon server.js --ignore src/ --ignore dist"
+    "start:dev": "npm run webpack -- --watch --mode=development & DATABASE_URL=postgres://localhost/monster_db nodemon server/index.js --ignore src/ --ignore dist"
   },
   "keywords": [],
   "author": "protonbobby",
