--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
     "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
+    "chai": "^4.2.0",
     "express": "^4.16.3",
+    "jwt-simple": "^0.5.5",
+    "mocha": "^5.2.0",
     "morgan": "^1.9.1",
     "pg": "^7.4.3",
     "react": "^16.4.2",
@@ -22,6 +25,7 @@
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
     "sequelize": "^4.38.0",
+    "supertest": "^3.3.0",
     "webpack": "^4.16.5",
     "webpack-cli": "^3.1.0"
   },
@@ -36,7 +40,8 @@
     "postinstall": "npm run webpack",
     "start": "node server/index.js",
     "webpack": "./node_modules/webpack/bin/webpack.js",
-    "start:dev": "npm run webpack -- --watch --mode=development & DATABASE_URL=postgres://localhost/monster_db nodemon server/index.js --ignore src/ --ignore dist"
+    "start:dev": "npm run webpack -- --watch --mode=development & DATABASE_URL=postgres://localhost/monster_db nodemon server/index.js --ignore src/ --ignore dist",
+    "test:dev": "JWT_SECRET=foo DATABASE_URL=postgres://localhost/my_db_test nodemon ./node_modules/mocha/bin/mocha server/*test.js"
   },
   "keywords": [],
   "author": "protonbobby",
